--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <meta charset="utf-8">
   <title>CAKE's Page</title>
   <script>
-    window.alert(HELLO?)
+    window.alert(启动？)
   </script>
 </html>
